# MyNexusAlign

./: .CLAUDE  .gitignore  CONFIG_DESIGN.md  EVAL.md  README.md  REPO_STRUCTURE.md  TASK.md  eval.sh  model.md  pyproject.toml  test.py  test.sh  train.sh
.claude/: CLAUDE.md
scripts/: prepare_eval_assets.sh
src/nexus_align/: __init__.py  registry.py
src/nexus_align/algorithms/: __init__.py  base_algorithm.py  meanflow.py
src/nexus_align/cli/: main.py
src/nexus_align/configs/: main.yaml
src/nexus_align/configs/algorithm/: meanflow.yaml
src/nexus_align/configs/data/: imagenet_1k.yaml  lmdb_latents.yaml
src/nexus_align/configs/eval/: fid.yaml
src/nexus_align/configs/model/: meanflow_sit.yaml  sit.yaml
src/nexus_align/datasets/: __init__.py  base_data_loader.py  base_dataset.py  dist_dataloader.py  imagenet_1k.py  lmdb_latents.py  utils.py
src/nexus_align/engine/: distributed.py  logger.py  meter.py  meter_review.md  setup.py  tracker.py
src/nexus_align/eval/: __init__.py  eval_all.py  evaluate.py  evaluator.py  metrics.py  sampler.py
src/nexus_align/models/: __init__.py  base_model.py  meanflow_sit.py
src/nexus_align/trainers/: __init__.py  base_trainer.py  meanflow_trainer.py
src/nexus_align/utils/: dtype.py  progress.py  seed.py
