[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-align"
version = "0.1.0-a1"
description = "NexusAlign: A Unified Research Framework for Tracking, Reproducing, and Extending Foundation Model Algorithms."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
  { name = "Junkun Yuan" }
]
keywords = [
    "foundation models",
    "diffusion models",
    "image generation",
    "flow matching"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent"
]

dependencies = [
    "torch>=2.7,<2.8",
    "hydra-core>=1.3.0",
    "numpy>=2.4",
    "pyarrow>=24.0",
    "Pillow>=12.0",
    "wandb>=0.26",
    "tensorboard>=2.20",
    "tqdm>=4.67",
    "omegaconf>=2.3",
    "diffusers>=0.38",
    "timm>=1.0",
    "torchvision>=0.22",
    "torch-fidelity>=0.4",
    "safetensors>=0.7",
    "matplotlib>=3.10",
    "psutil>=7.2",
    "pynvml>=13.0",
    "PyYAML>=6.0",
    "accelerate>=1.13",
]

[project.urls]
Homepage = "https://github.com/junkunyuan/NexusAlign"
Repository = "https://github.com/junkunyuan/NexusAlign"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "ipdb"
]

[project.scripts]
nexus-align = "nexus_align.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
